--- a/Computation Interface/Computation Interface/Base.lproj/Main.storyboard
+++ b/Computation Interface/Computation Interface/Base.lproj/Main.storyboard
@@ -710,16 +710,16 @@
                         <autoresizingMask key="autoresizingMask"/>
                         <subviews>
                             <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="LeI-xi-Bhz">
-                                <rect key="frame" x="18" y="222" width="39" height="17"/>
+                                <rect key="frame" x="49" y="218" width="11" height="17"/>
                                 <autoresizingMask key="autoresizingMask"/>
-                                <textFieldCell key="cell" lineBreakMode="clipping" title="Force" id="jip-vR-o02">
+                                <textFieldCell key="cell" lineBreakMode="clipping" title="x" id="jip-vR-o02">
                                     <font key="font" usesAppearanceFont="YES"/>
                                     <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
                                     <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
                                 </textFieldCell>
                             </textField>
                             <textField verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="OWI-Mk-tki">
-                                <rect key="frame" x="24" y="192" width="96" height="22"/>
+                                <rect key="frame" x="55" y="188" width="107" height="22"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" selectable="YES" editable="YES" sendsActionOnEndEditing="YES" borderStyle="bezel" drawsBackground="YES" id="myb-3o-6kA">
                                     <font key="font" metaFont="system"/>
@@ -731,16 +731,16 @@
                                 </textFieldCell>
                             </textField>
                             <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="kSO-yE-sNy">
-                                <rect key="frame" x="18" y="167" width="36" height="17"/>
+                                <rect key="frame" x="49" y="163" width="11" height="17"/>
                                 <autoresizingMask key="autoresizingMask"/>
-                                <textFieldCell key="cell" lineBreakMode="clipping" title="Mass" id="nfc-DQ-Vhl">
+                                <textFieldCell key="cell" lineBreakMode="clipping" title="y" id="nfc-DQ-Vhl">
                                     <font key="font" metaFont="system"/>
                                     <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
                                     <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
                                 </textFieldCell>
                             </textField>
                             <textField verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="SG0-7R-lbA">
-                                <rect key="frame" x="25" y="137" width="96" height="22"/>
+                                <rect key="frame" x="56" y="133" width="106" height="22"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" selectable="YES" editable="YES" sendsActionOnEndEditing="YES" borderStyle="bezel" drawsBackground="YES" id="sdJ-1B-FqU">
                                     <font key="font" metaFont="system"/>
@@ -752,16 +752,16 @@
                                 </connections>
                             </textField>
                             <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="2g7-5b-YzV">
-                                <rect key="frame" x="18" y="112" width="39" height="17"/>
+                                <rect key="frame" x="49" y="108" width="11" height="17"/>
                                 <autoresizingMask key="autoresizingMask"/>
-                                <textFieldCell key="cell" lineBreakMode="clipping" title="Angle" id="6bg-tk-VoT">
+                                <textFieldCell key="cell" lineBreakMode="clipping" title="z" id="6bg-tk-VoT">
                                     <font key="font" metaFont="system"/>
                                     <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
                                     <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
                                 </textFieldCell>
                             </textField>
                             <textField verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="HXH-X3-OBv">
-                                <rect key="frame" x="25" y="82" width="96" height="22"/>
+                                <rect key="frame" x="56" y="78" width="104" height="22"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" selectable="YES" editable="YES" sendsActionOnEndEditing="YES" borderStyle="bezel" drawsBackground="YES" id="AOk-6A-lYz">
                                     <font key="font" metaFont="system"/>
@@ -772,17 +772,33 @@
                                     <action selector="fieldAction:" target="XfG-lQ-9wD" id="Coi-Pv-sEB"/>
                                 </connections>
                             </textField>
+                            <slider verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="mTQ-tG-zN2">
+                                <rect key="frame" x="197" y="189" width="223" height="19"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
+                                <sliderCell key="cell" continuous="YES" state="on" alignment="left" minValue="1" maxValue="100" doubleValue="49" tickMarkPosition="above" allowsTickMarkValuesOnly="YES" sliderType="linear" id="txS-S6-S07"/>
+                                <connections>
+                                    <action selector="sliderAction:" target="XfG-lQ-9wD" id="7xG-Sp-zkZ"/>
+                                </connections>
+                            </slider>
+                            <slider verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="itI-G4-yug">
+                                <rect key="frame" x="197" y="134" width="223" height="19"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
+                                <sliderCell key="cell" continuous="YES" state="on" alignment="left" minValue="1" maxValue="100" doubleValue="49" tickMarkPosition="above" allowsTickMarkValuesOnly="YES" sliderType="linear" id="wpZ-io-tXS"/>
+                                <connections>
+                                    <action selector="sliderAction:" target="XfG-lQ-9wD" id="qLP-tD-sqV"/>
+                                </connections>
+                            </slider>
                             <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Yrr-Qe-hQW">
-                                <rect key="frame" x="18" y="45" width="171" height="17"/>
+                                <rect key="frame" x="155" y="37" width="127" height="17"/>
                                 <autoresizingMask key="autoresizingMask"/>
-                                <textFieldCell key="cell" lineBreakMode="clipping" title="Horizontal Distance Trveled" id="cop-fS-kUu">
+                                <textFieldCell key="cell" lineBreakMode="clipping" title="Distnace from origin" id="cop-fS-kUu">
                                     <font key="font" metaFont="system"/>
                                     <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
                                     <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
                                 </textFieldCell>
                             </textField>
                             <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Tne-qu-J1M">
-                                <rect key="frame" x="30" y="20" width="42" height="17"/>
+                                <rect key="frame" x="167" y="12" width="42" height="17"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <textFieldCell key="cell" lineBreakMode="clipping" title="Result" id="d0s-tw-Dhu">
                                     <font key="font" metaFont="system"/>
@@ -790,20 +806,13 @@
                                     <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
                                 </textFieldCell>
                             </textField>
-                            <slider verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="mTQ-tG-zN2">
-                                <rect key="frame" x="150" y="193" width="312" height="24"/>
+                            <slider verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="ft3-3Y-8ei">
+                                <rect key="frame" x="197" y="79" width="223" height="19"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
-                                <sliderCell key="cell" continuous="YES" state="on" alignment="left" minValue="1" maxValue="100" doubleValue="49" tickMarkPosition="above" numberOfTickMarks="100" allowsTickMarkValuesOnly="YES" sliderType="linear" id="txS-S6-S07"/>
-                            </slider>
-                            <slider verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="eLE-us-fWh">
-                                <rect key="frame" x="150" y="138" width="312" height="24"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
-                                <sliderCell key="cell" continuous="YES" state="on" alignment="left" minValue="1" maxValue="100" doubleValue="50" tickMarkPosition="above" numberOfTickMarks="100" allowsTickMarkValuesOnly="YES" sliderType="linear" id="Xz6-zm-aEf"/>
-                            </slider>
-                            <slider verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="47e-U1-ThR">
-                                <rect key="frame" x="150" y="83" width="312" height="24"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
-                                <sliderCell key="cell" continuous="YES" state="on" alignment="left" maxValue="90" doubleValue="50" tickMarkPosition="above" numberOfTickMarks="91" allowsTickMarkValuesOnly="YES" sliderType="linear" id="qIj-aq-8nj"/>
+                                <sliderCell key="cell" continuous="YES" state="on" alignment="left" minValue="1" maxValue="100" doubleValue="49" tickMarkPosition="above" allowsTickMarkValuesOnly="YES" sliderType="linear" id="kBP-gy-gxd"/>
+                                <connections>
+                                    <action selector="sliderAction:" target="XfG-lQ-9wD" id="MLy-yR-kF6"/>
+                                </connections>
                             </slider>
                         </subviews>
                     </view>
@@ -812,6 +821,13 @@
                         <outlet property="distanceField" destination="Tne-qu-J1M" id="Cug-xn-sTt"/>
                         <outlet property="forceField" destination="OWI-Mk-tki" id="sWe-zK-JeO"/>
                         <outlet property="massField" destination="SG0-7R-lbA" id="54P-cf-KLc"/>
+                        <outlet property="resultField" destination="Tne-qu-J1M" id="bmA-xy-azg"/>
+                        <outlet property="x1Field" destination="OWI-Mk-tki" id="OXp-cr-80i"/>
+                        <outlet property="x1Slider" destination="mTQ-tG-zN2" id="etc-kz-Hlk"/>
+                        <outlet property="y1Field" destination="SG0-7R-lbA" id="ep0-Cf-Pwt"/>
+                        <outlet property="y1Slider" destination="itI-G4-yug" id="HVR-9O-5Vo"/>
+                        <outlet property="z1Field" destination="HXH-X3-OBv" id="kzb-Y6-4zi"/>
+                        <outlet property="z1Slider" destination="ft3-3Y-8ei" id="h3z-ba-SkZ"/>
                     </connections>
                 </viewController>
                 <customObject id="rPt-NT-nkU" userLabel="First Responder" customClass="NSResponder" sceneMemberID="firstResponder"/>
