--- a/Media Player 2019/Media Player 2019/Base.lproj/Main.storyboard
+++ b/Media Player 2019/Media Player 2019/Base.lproj/Main.storyboard
@@ -760,9 +760,18 @@
                                 </connections>
                             </button>
                             <textField autoresizesSubviews="NO" horizontalHuggingPriority="251" verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="w2u-8k-RbB">
-                                <rect key="frame" x="222" y="3" width="37" height="17"/>
+                                <rect key="frame" x="87" y="8" width="37" height="17"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMinX="YES" widthSizable="YES" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <textFieldCell key="cell" lineBreakMode="clipping" title="Label" id="m7v-yX-fV2">
+                                    <font key="font" metaFont="system"/>
+                                    <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
+                                    <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
+                                </textFieldCell>
+                            </textField>
+                            <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="BAa-XD-ZiB">
+                                <rect key="frame" x="347" y="8" width="37" height="17"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <textFieldCell key="cell" lineBreakMode="clipping" title="Label" id="26b-GB-cdu">
                                     <font key="font" metaFont="system"/>
                                     <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
                                     <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
@@ -771,7 +780,10 @@
                         </subviews>
                     </view>
                     <connections>
+                        <outlet property="duration" destination="BAa-XD-ZiB" id="fYA-Of-fyX"/>
+                        <outlet property="playButtonLabel" destination="KeQ-ob-CkT" id="52r-DG-FLe"/>
                         <outlet property="playerView" destination="KHw-Ej-Wzg" id="rXO-as-ejg"/>
+                        <outlet property="timeCode" destination="w2u-8k-RbB" id="50F-80-fnn"/>
                     </connections>
                 </viewController>
                 <customObject id="rPt-NT-nkU" userLabel="First Responder" customClass="NSResponder" sceneMemberID="firstResponder"/>
